# Integrals

./: .buildinfo  .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js  toolchain.cmake  transformed_design.html
.github/: .licenserc.yaml  enable_openmp.cmake
Integrals/: CMakeLists.txt  FourCTensorBuilder.cpp  FourCTensorBuilder.hpp  FourCenterIntegral.hpp  IntegralPIMPL.hpp  IntegralTensorBuilder.hpp  IntegralsMM.cpp  LibIntFunctor.hpp  LibintIntegral.cpp  LibintIntegral.hpp  TAMMIntFunctor.cpp  TAMMIntFunctor.hpp  ThreeCTensorBuilder.cpp  ThreeCTensorBuilder.hpp  ThreeCenterIntegral.hpp  TwoCTensorBuilder.cpp  TwoCTensorBuilder.hpp  TwoCenterIntegral.hpp
Integrals/nwx_libint/: LibInt2C.hpp  LibInt3C.hpp  LibInt4C.hpp  nwx_libint.cpp  nwx_libint.hpp
IntegralsEx/: CMakeLists.txt  FourCTensorBuilder.cpp  FourCTensorBuilder.hpp  FourCenterIntegral.hpp  IntegralTensorBuilder.hpp  OverlapTensorBuilder.cpp  OverlapTensorBuilder.hpp  ThreeCTensorBuilder.cpp  ThreeCTensorBuilder.hpp  ThreeCenterIntegral.hpp  TwoCTensorBuilder.cpp  TwoCTensorBuilder.hpp  TwoCenterIntegral.hpp
IntegralsEx_Test/: CMakeLists.txt  H2O_STO3G_DF.hpp  H2O_STO3G_Multipole.hpp  TestCommon.hpp  TestDF.cpp  TestDFBuilder.cpp  TestDF_libint.cpp  TestEDipoleBuilder.cpp  TestEDipole_libint.cpp  TestEOctopoleBuilder.cpp  TestEOctopole_libint.cpp  TestEQuadrupoleBuilder.cpp  TestEQuadrupole_libint.cpp  TestERI.cpp  TestERI_libint.cpp  TestElecKineticBuilder.cpp  TestKinetic_libint.cpp  TestMetric.cpp  TestMetricBuilder.cpp  TestMetric_libint.cpp  TestNuclearElecBuilder.cpp  TestNuclearElectron_libint.cpp  TestOverlap.cpp  TestOverlapBuilder.cpp  TestOverlap_libint.cpp
IntegralsEx_Test/nwx_libint/: CMakeLists.txt  TestDF.cpp  TestERI.cpp  TestKinetic.cpp  TestMetric.cpp  TestNuclearElectron.cpp  TestOverlap.cpp
Integrals_Test/: CMakeLists.txt  H2O_STO3G_DF.hpp  H2O_STO3G_ERI.hpp  H2O_STO3G_Multipole.hpp  TestCommon.hpp  TestDFBuilder.cpp  TestDF_libint.cpp  TestEDipoleBuilder.cpp  TestEDipole_libint.cpp  TestEOctopoleBuilder.cpp  TestEOctopole_libint.cpp  TestEQuadrupoleBuilder.cpp  TestEQuadrupole_libint.cpp  TestERI_libint.cpp  TestElecKineticBuilder.cpp  TestKinetic_libint.cpp  TestMetricBuilder.cpp  TestMetric_libint.cpp  TestNuclearElecBuilder.cpp  TestNuclearElectron_libint.cpp  TestOverlapBuilder.cpp  TestOverlap_libint.cpp  test_main.cpp  water.xyz
NWChemExBase/: .gitrepo
_static/: documentation_options.js
attic/: libint_old.cpp  test_common_TA.hpp  transformed.cpp
cmake/: FindCppyy.cmake  FindLibInt.cmake  Findlibint.cmake  get_cpp.cmake  nwx_cxx_api_docs.cmake  nwx_python_mods.cmake
docs/: Makefile  requirements.txt
dox/: .gitrepo  Doxyfile  settings.doxcfg
integrals/: CMakeLists.txt  cauchy_schwarz.cpp  cauchy_schwarz.hpp  doi.cpp  doi.hpp  edipole_integral.cpp  emultipole_integrals.hpp  eoctopole_integral.cpp  equadrupole_integral.cpp  eri2c_integral.cpp  eri2c_integral.hpp  eri3c_integral.cpp  eri3c_integral.hpp  eri4c_integral.cpp  eri4c_integral.hpp  eri_integral.hpp  eri_integrals.hpp  integralpimpl.hpp  integrals_mm.cpp  integrals_mm.hpp  integralsmm.cpp  integralsmm.hpp  kinetic_integral.cpp  kinetic_integral.hpp  libint_functor.hpp  libint_integral.cpp  libint_integral.hpp  nuclear_integral.cpp  nuclear_integral.hpp  overlap_integral.cpp  overlap_integral.hpp  schwarz_screening.hpp  stg2c_integral.cpp  stg3c_integral.cpp  stg4c_integral.cpp  stg_integrals.hpp  tamm_int_functor.cpp  tamm_int_functor.hpp  transformed.hpp  types.hpp  (+5 more)
integrals_cxx_api/: _formulas.tex  _formulas_dark.tex  annotated.html  ao__integrals_8hpp_source.html  basis__set__serialize_8hpp_source.html  builder__factory_8hpp_source.html  cauchy__schwarz_8hpp_source.html  cauchy__schwarz__screener_8hpp_source.html  classes.html  classintegrals_1_1ao__integrals_1_1AODispatcher-members.html  classintegrals_1_1ao__integrals_1_1AODispatcher.html  classintegrals_1_1ao__integrals_1_1AODispatcher__inherit__graph.map  classintegrals_1_1ao__integrals_1_1AODispatcher__inherit__graph.md5  classintegrals_1_1ao__integrals_1_1LibIntVisitor-members.html  classintegrals_1_1ao__integrals_1_1LibIntVisitor.html  classintegrals_1_1ao__integrals_1_1LibIntVisitor__coll__graph.md5  classintegrals_1_1ao__integrals_1_1LibIntVisitor__inherit__graph.map  classintegrals_1_1libint_1_1LibintVisitor-members.html  classintegrals_1_1libint_1_1LibintVisitor.html  classintegrals_1_1libint_1_1LibintVisitor__coll__graph.map  classintegrals_1_1libint_1_1LibintVisitor__coll__graph.md5  classintegrals_1_1libint_1_1LibintVisitor__inherit__graph.md5  dir_000000_000002.html  dir_000004_000002.html  dir_000004_000008.html  dir_000005_000001.html  dir_000005_000002.html  dir_000006_000002.html  dir_000008_000002.html  dir_05dbdbb43cf84d7c01d4b7e715b8d46c.html  dir_3fbc7184ca769173006adf537b451322.html  dir_5c0d64f70903e893b1efe571a4b8de29.html  dir_5c0d64f70903e893b1efe571a4b8de29_dep.map  dir_5c0d64f70903e893b1efe571a4b8de29_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_6e792fe840ecf39575aa2c64ffa20673.html  dir_8251f6295fe9e57a926c629b1c19a6f6.html  dir_8344990a5f02979334f3f08fe7a84c98.html  (+148 more)
module_api/: AO_integral_driver.html  Analytic_Error.html  Black_Box_Primitive_Pair_Estimator.html  CauchySchwarz_Estimator.html  CenterTiledShape.html  Coulomb_Metric.html  DOI.html  DOI4.html  DOI4_Factory.html  Decontract_Basis_Set.html  Density_Fitted_J_builder.html  Density_Fitted_K_builder.html  Density_Fitting_Integral.html  Direct_DOI.html  Direct_DOI4.html  Direct_ERI2.html  Direct_ERI3.html  Direct_ERI3_CS.html  Direct_ERI4.html  Direct_ERI4_CS.html  Direct_Kinetic.html  Direct_Kinetic_CS.html  Direct_Nuclear.html  Direct_Nuclear_CS.html  Direct_Overlap.html  Direct_Overlap_CS.html  Direct_STG2.html  Direct_STG3.html  Direct_STG3_CS.html  Direct_STG4.html  Direct_STG4_CS.html  Direct_Yukawa2.html  Direct_Yukawa3.html  Direct_Yukawa3_CS.html  (+73 more)
(+595 files in other folders)
