cmake_minimum_required(VERSION ${CMAKE_VERSION})
project(IntegralsEx-Test VERSION 0.0.0 LANGUAGES CXX)
find_package(IntegralsEx REQUIRED)
include(TargetMacros)

add_cxx_unit_test(TestOverlap_libint IntegralsEx)
add_cxx_unit_test(TestKinetic_libint IntegralsEx)
add_cxx_unit_test(TestMetric_libint IntegralsEx)
add_cxx_unit_test(TestNuclearElectron_libint IntegralsEx)
add_cxx_unit_test(TestDF_libint IntegralsEx)
add_cxx_unit_test(TestERI_libint IntegralsEx)
add_cxx_unit_test(TestOverlapBuilder IntegralsEx)
add_cxx_unit_test(TestElecKineticBuilder IntegralsEx)
add_cxx_unit_test(TestNuclearElecBuilder IntegralsEx)
add_cxx_unit_test(TestMetricBuilder IntegralsEx)
add_cxx_unit_test(TestDFBuilder IntegralsEx)
